<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/beranda"
        android:title="@string/beranda"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/profil"
        android:title="@string/profil"
        android:icon="@drawable/ic_account_circle_black_24dp"/>

    <item
        android:id="@+id/notifikasi"
        android:title="@string/notifikasi"
        android:icon="@drawable/ic_notifications_black_24dp"/>

    <item
        android:id="@+id/keranjang"
        android:title="@string/keranjang"
        android:icon="@drawable/ic_shopping_cart_black_24dp"/>

    <item
        android:id="@+id/transaksi"
        android:title="@string/transaksi"
        android:icon="@drawable/ic_payment_black_24dp"/>
</menu>